Version: 2.0.6
Date: 2025-0?-??
  
  Features:
    - Re-added interplanetary attack support.

  Changes:
    - Mutalisk learnt lousy hit and run tactic.   
    - Changed demolisher/nydus worm earthquake AOE attack to affect all forces, instead of not-same.
    - Updated Ultralisk sound.
    - Added missing render_layer to scourge
  
  Bugfixes:
    - Fixed nydus worm did not spawn on planet char due to name change in later version. Warning: this may affect existing save.

  Optimization:
    - Fixed an issue that higher level base building group they can't path to destination.           

---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-01-18

  Changes:
    - Auto select "zerg" on positive axis for 2 ways split.
    - Auto select "zerg" on south west corner for 4 ways split.

  Bugfixes:
    - Fixed data stage crash when 3rd party mod removed "death world" from map presets

---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-12-13

  Changes:
    - Scouts have their own localised name, instead of it with parent entity.

---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2024-12-10

  Bugfixes:
    - Fixed planet kill counts did not persist through save.

---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-12-10

  Changes:
    - Added map_seed_offset to planet Char
    - Updated General in tip and trick about biter egg and building capture.
    - Updated Planet in tip and trick about its WIP state.    
    - Fixed Locale    

---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-12-05

  Features:
    - Re-add support for 2 and 4 way split.
    - Added Mixed races support for Nauvis in space age 