@@ -43,9 +43,9 @@ enemy_erm_zerg--broodling=__1__ Broodling
 enemy_erm_zerg--land_scout=__1__ Land Scout
 enemy_erm_zerg--aerial_scout=__1__ Air Scout
 
-enemy_erm_zerg--small-demolisher=Small Nydus Worm
-enemy_erm_zerg--medium-demolisher=Medium Nydus Worm
-enemy_erm_zerg--big-demolisher=Big Nydus Worm
+enemy_erm_zerg--small-nydusworm=Small Nydus Worm
+enemy_erm_zerg--medium-nydusworm=Medium Nydus Worm
+enemy_erm_zerg--big-nydusworm=Big Nydus Worm
 
 
 #Building
@@ -74,9 +74,9 @@ blood-cloud=Plague
 purple-fire=Erosive Puke
 dark-swarm=Dark Swarm
 
-zerg-spawning-medium-oxide-asteroid=Medium Infested Oxide Asteroid
-zerg-spawning-medium-carbonic-asteroid=Medium Infested Carbonic Asteroid
-zerg-spawning-medium-metallic-asteroid=Medium Infested Metallic Asteroid
+enemy_erm_zerg--medium-infested-oxide-asteroid=Medium Infested Oxide Asteroid
+enemy_erm_zerg--medium-infested-carbonic-asteroid=Medium Infested Carbonic Asteroid
+enemy_erm_zerg--medium-infested-metallic-asteroid=Medium Infested Metallic Asteroid
 
 [gui]
 label-erm-zerg=Zerg - Garm
