@@ -10,6 +10,8 @@ Date: 2025-0?-??
     - Changed demolisher/nydus worm earthquake AOE attack to affect all forces, instead of not-same.
     - Updated Ultralisk sound.
     - Added missing render_layer to scourge
+    - Changed nydus worm internal name to *-nydusworm, instead of *-demolisher.
+    - Added advanced_target_priorities mod support.
   
   Bugfixes:
     - Fixed nydus worm did not spawn on planet char due to name change in later version. Warning: this may affect existing save.
